--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!-- Open Graph Meta Tags for preview -->
     <meta property="og:title" content="poasterGPT - Unhinged Poasting" />
     <meta property="og:description" content="An unhinged schizopoaster A.I. trained on some of Twitter's most peculiar tweets." />
-    <meta property="og:image" content="URL_TO_IMAGE" />
+    <meta property="og:image" content="https://github.com/RyanLucas3/poasterGPT/assets/55145311/54364744-e2a4-4997-bd4a-6ac1e50baf90" />
     
     <!-- Meta Refresh Tag to redirect to your Streamlit app after 1 second -->
-    <meta http-equiv="refresh" content="1;url=https://your_streamlit_app_url.com" />
+    <meta http-equiv="refresh" content="1;url=https://poastergpt.streamlit.app/" />
 </head>
 <body>
-    <p>If you're not redirected, <a href="https://your_streamlit_app_url.com">click here</a>.</p>
+    <p>If you're not redirected, <a href="https://poastergpt.streamlit.app/">click here</a>.</p>
 </body>
 </html>
