--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Open Graph Meta Tags for preview -->
     <meta property="og:title" content="poasterGPT - Unhinged Poasting" />
-    <meta property="og:description" content="An unhinged schizopoaster A.I. trained on some of Twitter's most peculiar tweets." />
+    <meta property="og:description" content="An unhinged schizopoaster A.I. fine-tuned on some of Twitter's most peculiar tweets." />
     <meta property="og:image" content="https://github.com/RyanLucas3/poasterGPT/assets/55145311/54364744-e2a4-4997-bd4a-6ac1e50baf90" />
     
     <!-- Meta Refresh Tag to redirect to your Streamlit app after 1 second -->
