--- a/index.html
+++ b/index.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poasterGPT Redirect</title>
     
-    <!-- Open Graph Meta Tags for preview -->
-    <meta property="og:title" content="poasterGPT - Unhinged Poasting" />
-    <meta property="og:description" content="An unhinged schizopoaster A.I. fine-tuned on some of Twitter's most peculiar tweets." />
+    <!-- Primary Meta Tags -->
+    <title>PoasterGPT -- An AI fine-tuned to product hot takes</title>
+    <meta name="title" content="PoasterGPT -- An AI fine-tuned to product hot takes" />
+    <meta name="description" content="We would all love if GPT could generate 🔥 takes, but let's face it 99% of the time it generates some politically correct clustroid-center of human thought." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://poastergpt.streamlit.app/" />
+    <meta property="og:title" content="PoasterGPT -- An AI fine-tuned to product hot takes" />
+    <meta property="og:description" content="We would all love if GPT could generate 🔥 takes, but let's face it 99% of the time it generates some politically correct clustroid-center of human thought." />
     <meta property="og:image" content="https://github.com/RyanLucas3/poasterGPT/assets/55145311/54364744-e2a4-4997-bd4a-6ac1e50baf90" />
-    
-    <!-- Meta Refresh Tag to redirect to your Streamlit app after 1 second -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://poastergpt.streamlit.app/" />
+    <meta property="twitter:title" content="PoasterGPT -- An AI fine-tuned to product hot takes" />
+    <meta property="twitter:description" content="We would all love if GPT could generate 🔥 takes, but let's face it 99% of the time it generates some politically correct clustroid-center of human thought." />
+    <meta property="twitter:image" content="https://github.com/RyanLucas3/poasterGPT/assets/55145311/54364744-e2a4-4997-bd4a-6ac1e50baf90" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <meta http-equiv="refresh" content="1;url=https://poastergpt.streamlit.app/" />
+
 </head>
 <body>
     <p>If you're not redirected, <a href="https://poastergpt.streamlit.app/">click here</a>.</p>
